--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "ai": "^4.1.54",
-    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "next": "^15.2.1",
     "openai": "^4.86.2",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.10"
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4"
+    "@types/react-dom": "^19.0.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.11"
   }
 }
